refactor(core): remove template expression caching from `Target` and simplify logic
- Eliminated `templateExpressionCache` to reduce complexity and improve maintainability.
- Updated `computeDestinationExpressions` to use `Collectors.toList()` for a mutable list.
- Simplified `evaluateTemplate` by removing cache-related logic and comments on minor performance differences.